--- a/header.css
+++ b/header.css
@@ -126,9 +126,10 @@ nav{
 .header-menu {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+
     gap: 1.5rem;
-    padding: 0.3rem 0;
+    padding: 0.3rem 0 0.3rem 1rem;
     background-color: var(--beige);
     /* border: 1px solid #f0f0f0; */
 }
@@ -170,12 +171,19 @@ nav{
     transform: scale(1);
     transition: transform 0.3s ease-in-out;
 }
-.menu-text, .menu-icon>i{
+.menu-icon>i{
     
     font-weight: 700;
     color: var(--blue);
-    font-size: 1.35rem;
+    font-size: 1.2rem;
     letter-spacing: 1px;
+}
+.menu-text{
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    color: var(--blue);
+    font-size: 1.1rem;
 }
 
 .header-menu-option:hover > .menu-text, .header-menu-option:hover > .menu-icon>i{
