--- a/shop.css
+++ b/shop.css
@@ -19,19 +19,30 @@
     list-style: none;
     padding: 0;
 }
-
+.product h4{
+    /* color: #6633cc; */
+    color: var(--blue);
+}
 .product p{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: -1px;
+    font-weight: 400;
 }
 
 del{
     color: red;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 b{
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #6633cc;
+    font-weight: 700;
+    font-size: 1.2rem;
 }
 .shop-sidebar li, .shop-sidebar h3 {
     margin-bottom: 10px;
