--- a/header.css
+++ b/header.css
@@ -28,7 +28,7 @@ header{
 background: linear-gradient(180deg, rgba(9,190,191,1) 0%, rgba(39,170,178,1) 89%, rgba(10,156,149,1) 100%); */
 
 background: rgb(246,241,173);
-background: linear-gradient(180deg, rgba(246,241,173,1) 0%, rgba(235,226,28,1) 89%);
+background-image: linear-gradient(180deg, rgba(246,241,173,1) 0%, rgba(235,226,28,1) 89%);
 }
 
 
@@ -94,7 +94,7 @@ nav{
 .other-nav-items{
     display: flex;
     margin-right: 2rem;
-    gap: 2.5rem;
+    gap: 1.5rem;
     
 }
 
@@ -115,7 +115,7 @@ nav{
 }
 
 .other-nav-items i{
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 .other-nav-items button div{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
