--- a/hero.css
+++ b/hero.css
@@ -1,101 +1,18 @@
 :root {
     --blue: #001A8E;
-    /* --blue: #0528C5; */
-    /* --blue:#87CEEB; */
     --cyan: #26C8FB;
-    /* --yellow: #F9EE83; */
-    /* --yellow: #F9F718; */
-    /* --yellow: #FCD768; */
     --yellow: #FFAD28;
-    /* --pink: #FF57BB; */
     --pink:#FF09A4;
-    /* --beige:#FFF4E4; */
     --beige:#FFF4F8;
     --white: #ffffff;
   }
   
-
-.carousel_inner{
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .carousel_inner::after{
-    content: "";
-    display: block;
-    clear: both;
-  }
-  
-  .carousel_item{
-    position: relative;
-    float: left;
-    display: none;
-    width: 100%;
-    margin-right: -100%;
-  }
-  
-  /* slide effect */
-  .carousel_item__active,
-  .carousel_item__pos_next{
-    display: block;
-  }
-  
-  .carousel_item__pos_next{
-    left: 100%;
-  }
-  
-  .carousel_item__next{
-    transform: translateX(-100%);
-    transition: transform .5s ease-in-out;
-  }
-  
-  /* fade effect */
-  .carousel__fade .carousel_item__pos_next{
-    left: 0;
-    opacity: 0;
-  }
-  
-  .carousel__fade .carousel_item__next{
-    transform: none;
-    opacity: 1;
-    transition: opacity .5s ease-in-out;
-  }
-  
-  .carousel__fade .carousel_item__active .carousel_item__next{
-    opacity: 0;
-  }
-  
-  /* carousel */
-  .carousel_img{
-    display: block;
-    width: 100%;
-    opacity: 0.7;
-  }
-  
-  
-  
-  .carousel_description{
-    margin-top: .75rem;
-    line-height: 150%;
-  }
-  
-  
-  .category-menu{
-    display: flex;
-    z-index: 5;
-    width: 80%;
-    margin: 0 auto;
-    opacity: 1;
-    justify-content: space-between;
-  
-  }
   .hero-container{
       position: relative;
       width: 100%;
       height: calc(121vh - 4rem);
       background-position: bottom; 
       background-size: contain;
-      /* z-index: -1; */
       display: flex;
       background-image: linear-gradient(var(--cyan), var(--yellow));
       align-items: center;
@@ -106,7 +23,6 @@
     position: absolute;
     right: 4rem;
     top: 5rem;
-    /* border: 2px solid white; */
     border-radius: 20px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 0 5px var(--yellow);
     width: 35vw;
@@ -118,24 +34,15 @@
   }
   
   .hero-title{
-    /* position: absolute;
-    top: 13rem;
-    left: 2rem; */
     font-weight: 800;
     width: 50%;
     word-wrap: break-word;
     font-size: 4rem;
     height: fit-content;
     text-shadow: 0 0 3px var(--yellow), 0 0 5px var(--yellow);
-    color: #000;  
-    /* background: -webkit-linear-gradient(var(--yellow) 20%,  var(--pink));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+    color: #000;
   }
   .hero-subtitle{
-    /* position: absolute;
-    top: 24rem;
-    left: 2rem; */
     width: 50%;
     word-wrap: break-word;
     font-size: 1.3rem;
@@ -144,9 +51,6 @@
   }
   
   .special-offer {
-    /* position: absolute;
-    top: 6rem;
-    left: 2rem; */
     width:17rem;
     height: 5rem;
     display: flex;
@@ -154,27 +58,13 @@
     justify-content: center;
     background-image: url('./assets/sp-off-bg.png');
     background-position: center;
-    /* background-size: initial; */
-
     background-repeat: no-repeat;
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* background-color: rgba(255, 255, 255, 0.8); */
   }
   .special-offer > .sp-text{
     color: #fd6b22;
     font-size: 1.2rem;
-    
-    /* position: relative; */
-    /* top: 5px; */
-    /* right: 15rem; */
     letter-spacing: 2px;
     z-index: 1;
-    /* background-position: center;
-    background-image: url('./assets/sp-off-bg.png'); */
-    /* position: absolute; */
-    /* top: 5rem; */
     font-weight: 600;
   }
 
@@ -183,53 +73,13 @@
   .banner-container{
       height: 70%;
       margin-left: 5rem;
-      /* width: calc(100vw-1rem); */
-      /* width: 100%; */
-      /* height: 1200px; */
       background-position: bottom; 
       background-size: contain;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-
-      /* align-items: center; */
       
   }
-  
-  /* .banner-container img, .shopby-pets-container img{
-      width: 100%;
-      height: auto;
-       background-position: bottom; 
-      background-size: contain;
-      z-index: -2;
-      display: flex;
-      align-items: center;
-  
-  } */
-  /* .shop-link{
-      display: flex;
-      position: absolute;
-      top: 30rem;
-      width: fit-content;
-      left: 2rem;
-      text-decoration: none;
-      
-      
-      
-  }
-      
-
-  .book-link{
-    display: flex;
-    position: absolute;
-    top: 30rem;
-    width: fit-content;
-    left: 16rem;
-    text-decoration: none;
-    
-    
-    
-} */
 
 .shop-link, .book-link{
     text-decoration: none;
@@ -239,9 +89,6 @@
 
 .hero-btn-container{
     display: flex;
-    /* position: absolute;
-    top: 30rem;
-    left: 2rem; */
     flex-wrap: wrap;
     width: fit-content;
     gap: 1rem;
@@ -309,28 +156,27 @@
   .shop-now-container:hover > .arrow > i{
       color: whitesmoke;
   }
+
+  @media screen and (max-width:820px) {
+    .hero-title{
+      font-size: 3rem;
+    }
+    
+  }
   
-  .carousel_caption{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 3rem 2.5rem;
-    text-align: center;
-    /* color: #fff; */
-    z-index: 1;
- }
- 
- .carousel_title{
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
- }
- 
- .carousel_description{
-    margin-top: .75rem;
-    line-height: 150%;
- }
+
+  @media screen and (max-width:600px) {
+    .hero-title{
+      width: 100%;
+      font-size: 2.5rem;
+    }
+    .banner-container{
+      margin:0;
+      justify-content: center;
+      height: 100%;
+      padding: 20px 0;
+      gap: 1rem;
+    }
+    
+  }
+
