--- a/style.css
+++ b/style.css
@@ -46,6 +46,27 @@ font-style: normal;
 } */
 
 
+.cart-item-img{
+  width: 4rem;
+  height: 4rem;
+}
+.cart-item-img img{
+  width: 4rem;
+  height: auto;
+}
+
+.cart-item-box{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cart-name-box{
+  display: flex;
+  justify-content: space-between;
+}
+
 
 html{
     scroll-behavior: smooth;
@@ -59,7 +80,8 @@ body{
 }
 .menu-container button{
   background-color: transparent;
-  
+  height: 3.5rem;
+  width: 3.5rem;
   border-radius: 50%;
   border: none;
   z-index: 2;
@@ -69,8 +91,6 @@ body{
 
 .menu-container button i{
   font-size: 2rem;
-  padding-bottom: 1rem;
-  padding-left: 0.5rem;
   color: var(--white);
 
 }
@@ -146,65 +166,9 @@ body{
     border-radius: 50%;
     outline: none;
     object-fit: contain;
-    /* border-radius: 50%; */
-    
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 
 }
 
-/* .featured-ad{
-    background-color: #8d6ccf;
-} */
-
-/* .featured-ad-container{
-    display: grid;
-    grid-template-columns: auto auto;
-    margin:auto;
-    margin-top: 2rem;
-    gap: 1.5rem;
-    max-width: 90vw;
-    justify-content: space-around;
-    
-  
-  }
-  
-  
-  .featured-ad{
-
-    width: 36rem;
-    display: flex;
-    padding: 3rem;
-    border-radius: 10px;
-    margin-top: 2rem;
-    height: 18rem;
-    transition: all 0.3s ease-in-out;
-  } */
-  
-  /* .angle-right-container{
-    background-color: whitesmoke;
-    color: #6633cc;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    height: 1.5rem; 
-    width: 1.5rem; 
-    border-radius: 50%;
-  } */
-
-  /* .featured-ad:nth-child(1){
-    background-color: #e0f9ea ;
-  }*/
-  
-  /* .featured-ad:nth-child(2){
-    background-color: #c58770 ;
-    text-align: center;
-    word-wrap: balance ;
-  } 
-  
-  .featured-ad:hover{
-    background-position: 12px;
-  } */
-  
 
   .trending-container{
     padding: 3rem 2rem;   
@@ -225,7 +189,7 @@ body{
     0 0 30px var(--yellow),
     0 0 40px var(--yellow),
     0 0 55px var(--yellow);
-    
+    margin-bottom: 2rem;
     font-size: 3rem;
     font-weight: 800;
     /* letter-spacing: -1px; */
@@ -769,22 +733,22 @@ body{
   opacity: 0.8;
 }
 
-  /* .whatsapp-container{
+  .whatsapp-container{
     z-index: 2;
     position: fixed;
-    bottom: 2rem;
+    bottom: 5.5rem;
     right: 2rem;
-    height: 3rem;
-    width: 3rem;
+    height: 2.5rem;
+    width: 2.5rem;
     background-color: transparent;
   }
 
   .whatsapp-container img{
     object-fit: cover;
-    width: 3rem;
+    width: 2.5rem;
     height: auto;
 
-  } */
+  }
 
   .dogs-product-container{
     display: grid;
@@ -811,8 +775,9 @@ body{
 
   .cart-item-name, .cart-item-price, .cart-item-quantity{
     font-size: 0.8rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
-    width: 5rem;
+    /* width: 5rem; */
     color: #6633cc;
     text-align: center;
     word-wrap: break-word;
@@ -822,8 +787,13 @@ body{
 
   #checkout-btn{
     display: none;
+    margin-top: 2rem;
+    text-decoration: none;
   }
 
+  #checkout-container{
+    display: flex;
+  }
   
 
   .checkout-button{
@@ -831,16 +801,25 @@ body{
     color: whitesmoke;
     padding: 0.5rem 0.8rem;
     border-radius: 10px;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-weight: 600;
     border: none;
     cursor: pointer;
-    position: absolute;
-    bottom: 1rem;
-    left: 1rem;
     transition: background-color 0.3s ease-in-out;
-    display: flex;
     gap: 0.5rem;
+    display: flex;
+    text-decoration: none;
+  }
+
+  .checkout-button{
+    font-size: 1rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+  }
+
+  .checkout-button i{
+
+    font-size: 1.3rem !important;
   }
 
 
@@ -861,7 +840,8 @@ body{
 
   .total-text,.total-value{
     font-size: 1rem;
-    font-weight: 400;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
     width: 5rem;
     color: #fd6b22;
     text-align: center;
@@ -885,9 +865,7 @@ body{
   }
 
   .total-tab{
-    position: absolute;
-    right: 1rem;
-    bottom: 1rem;
+    margin-top: 2.5rem;
   }
 
   .category-menu{
