--- a/hero.css
+++ b/hero.css
@@ -5,6 +5,8 @@
     --pink:#FF09A4;
     --beige:#FFF4F8;
     --white: #ffffff;
+    /* --primaryFont: "alegreya-sans-sc", sans-serif; */
+    /* --secondaryFont: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   }
   
   .hero-container{
@@ -35,6 +37,7 @@
   
   .hero-title{
     font-weight: 800;
+    font-family:  var(--primaryFont);
     width: 50%;
     word-wrap: break-word;
     font-size: 4rem;
@@ -63,6 +66,7 @@
   .special-offer > .sp-text{
     color: #fd6b22;
     font-size: 1.2rem;
+    font-family: var(--primaryFont);
     letter-spacing: 2px;
     z-index: 1;
     font-weight: 600;
@@ -107,7 +111,7 @@
       gap: 0.5rem;
       font-size: 1rem;
       font-weight: 700;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: var(--secondaryFont);
       border-radius: 30px;
       transition: background 0.3s linear;
       z-index: 5;
