--- a/css/footer.css
+++ b/css/footer.css
@@ -43,6 +43,7 @@ footer {
 }
 .footer-section ul {
     list-style: none;
+    padding-left: 0;
 }
 .footer-section ul li {
     margin-bottom: 8px;
@@ -57,6 +58,7 @@ footer {
 .social-icons {
     display: flex;
     gap: 10px;
+    justify-content: center;
 }
 .social-icons a {
     color: white;
