--- a/css/order.css
+++ b/css/order.css
@@ -4,15 +4,20 @@
     --blue: #001A8E;
     --cyan: #26C8FB;
     --yellow: #FCD768;
-    --pink: #FF09A4;
-    --beige: #FFF4F8;
+    --pink:#FF09A4;
+    --green:#00796b;
+    --red: rgb(228, 0, 0);
+    --primaryFont: "alegreya-sans-sc", sans-serif;
+    --secondaryFont: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --thirdFont: 'Lato', sans-serif;
+    --beige:#FFF4F8;
     --white: #ffffff;
-}
+  }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: "alegreya-sans-sc", sans-serif;
+    font-family: var(--secondaryFont);
     font-style: normal;
 }
 
@@ -96,29 +101,43 @@ html {
 } */
 
 .right-order-container {
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 0 5px rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
-    padding: 2rem;
+    /* box-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 0 5px rgba(0, 0, 0, 0.5); */
+    /* border-radius: 20px; */
+    padding:  0 2rem;
     margin-left: 1rem;
 }
 
 b {
-    color: var(--blue);
+    color: var(--blue) !important;
 }
+
 
 .primary-img-container {
     width: 27rem;
     border-radius: 10px;
     height: 27rem;
+    position: relative;
     margin-bottom: 2rem;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 0 5px rgba(0, 0, 0, 0.5), 0 0 7px rgba(0, 0, 0, 0.7);
 
 }
 
 .primary-img-container img {
-    width: 100%;
+    width: 90%;
     border-radius: 10px;
     height: auto;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.order-bottom-container{
+    padding: 0 2rem;
+}
+
+.primary-img-container img:hover{
+    transform: scale(1.1);
 }
 
 .secondary-img-container {
@@ -127,6 +146,7 @@ b {
     height: 10rem;
     display: flex;
     gap: 1rem;
+    scrollbar-width: 0px;
 }
 
 
@@ -138,28 +158,91 @@ b {
 
 .order-button {
     border: none;
-    background-color: var(--pink);
+    background-color: var(--red);
     color: whitesmoke;
     padding: 0.8rem 2rem;
-    border-radius: 30px;
+    border-radius: 10px;
     font-size: 1rem;
     font-weight: 700;
     border: none;
+    margin: 20px auto;
+    width: clamp(250px, 100%, 25rem);
     cursor: pointer;
-    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .order-button:hover {
-    background-color: var(--cyan);
-    color: var(--blue);
+    background-color: var(--blue);
     box-shadow: 0 0 3px var(--yellow),
         0 0 5px var(--yellow);
 }
 
-h2 {
-    color: var(--pink);
+.counter-container {
+    display: flex;
+    background-color: #ddd;
+    border-radius: 5px;
+    align-items: center;
+}
+
+.counter-container button{
+    border: none;
+    background-color: transparent;
+    /* padding: 0.5rem; */
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2rem;
+    width: 2.2rem;
+}
+.counter-container span{
+    padding: 0 1.5rem;
+}
+
+h5{
+    margin-top: 0.8rem;
+}
+
+.pincode-container{
+    display: flex;
+    gap: 0rem;
+}
+.pincode-input{
+
+    padding: 0.5rem;
+    width: clamp(200px, 80%, 25rem);
+    border-radius: 5px 0 0 5px;
+    border: 2px solid var(--blue);
+
+}
+
+.delivery-info{
+    color: var(--red);
+}
+
+.pincode-button{
+    border: 2px solid var(--blue);
+    padding: 0.5rem 1rem;
+    border-radius: 0 5px 5px 0;
+    background-color: var(--blue);
+    color: var(--white);
+}
+
+
+.order-heading {
+    /* color: var(--pink); */
+    font-size: 1.8rem;
+    font-family: var(--primaryFont);
+    word-spacing: -1px;
+    color: #363434;
     font-weight: 900;
 }
+
+.mrp-container b{
+    color: var(--red) !important;
+    font-size: 2rem;
+}
+
 
 .bottom-container {
     display: flex;
@@ -184,7 +267,6 @@ h2 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     color: #363434;
-    height: 9rem;
     /* white-space: nowrap; */
     overflow: hidden;
     /* text-overflow: ellipsis; */
@@ -274,7 +356,7 @@ h2 {
 
 @media (max-width: 642px) {
     #product-details {
-        padding: 1.5rem;
+        padding: 0rem;
     }
 
     .primary-img-container {
